Bug 93449 - Hyperlink inside .DOC not working in .HTML
Summary: Hyperlink inside .DOC not working in .HTML
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: Other Windows (All)
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:5.1.0 target:4.4.6 target:5.0.3
Keywords: regression
: 93649 94932 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-15 11:38 UTC by Michel Handfield
Modified: 2016-10-25 19:20 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
file in odt (33.42 KB, application/vnd.oasis.opendocument.text)
2015-08-17 19:57 UTC, Michel Handfield
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michel Handfield 2015-08-15 11:38:09 UTC
The hyperling does in ODT work, but in HTML only the hyperlink to extern (www.) works, The hyperlink inside the page (menu) doesn't work.
Comment 1 Michel Handfield 2015-08-16 02:58:00 UTC
I have to add in odt the links inside documents work properlly, but saved in HTML it doesn't work! I had to open my libre office odt document in Open office to save it in HTML document before transfering it on my website (FTP) for having working link on my website! I  don't know why? A code line forgetting between Libre office 4.XXX and 5.XX? :)
Comment 2 tommy27 2015-08-17 16:54:17 UTC
please upload a simple test file
Comment 3 Michel Handfield 2015-08-17 19:57:45 UTC
Created attachment 117982 [details]
file in odt

Une fois envoyé par FTP, ça donne ceci: http://www.netrover.com/~stratji/TestLibre.html
Comment 4 raal 2015-08-25 13:31:54 UTC
I can confirm with Verze: 5.0.0.5
ID sestavení: 1b1a90865e348b492231e1c451437d7a15bb262b

The same problem like in bug 90905. @Vasily, if possible, could you take a look? Thank you
Comment 5 Vasily Melenchuk (CIB) 2015-08-25 13:45:51 UTC
I confirm this bug and it is a consequence of my previous fixes. I'll take a look.
Comment 6 tommy27 2015-08-25 13:48:02 UTC
probably even bug 93649 is about the same issue.
please guys double check and mark as duplicates if necessary
Comment 7 Vasily Melenchuk (CIB) 2015-08-25 15:08:55 UTC
*** Bug 93649 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2015-08-28 09:53:06 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fd3468024e1ac199f4a2f4108321ef8100d58414

tdf#93449 Internal hyperlinks are not exported corectly in HTML

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Vasily Melenchuk (CIB) 2015-08-31 09:26:16 UTC
Fix was pushed to LO master. Problem is not reproduced anymore.
Comment 10 tommy27 2015-08-31 09:32:33 UTC
any chance for a 5.0.x backport?
Comment 11 Commit Notification 2015-09-15 14:52:47 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0bd99a77e1655cee63ad7ec2bb25e45d13aac44d&h=libreoffice-4-4

tdf#93449 Internal hyperlinks are not exported corectly in HTML

It will be available in 4.4.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2015-09-15 14:52:54 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3b7ebeb5e7bbbfde0467f043171ab454340eaa0c&h=libreoffice-5-0

tdf#93449 Internal hyperlinks are not exported corectly in HTML

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Michael Stahl 2015-09-15 14:54:10 UTC
backported now
Comment 14 Terrence Enger 2015-10-11 01:05:06 UTC
*** Bug 94932 has been marked as a duplicate of this bug. ***