tdf#93449 Internal hyperlinks are not exported corectly in HTML

InetURLObject class does not work correctly with internal document
links, containing not full url, but just a fragment. This case added
as an exception for HTML link export.

Change-Id: I44496a1cf186836d4194fc65ce7bf9aeb2f79b65
Reviewed-on: https://gerrit.libreoffice.org/17993
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit fd3468024e1ac199f4a2f4108321ef8100d58414)
Signed-off-by: Michael Stahl <mstahl@redhat.com>